--- a/src/styles/auth.scss
+++ b/src/styles/auth.scss
@@ -3,6 +3,15 @@
     align-items: stretch;
     height: 100vh; //ocupar 100% do tamanho vertical da tela
 
+    select, input {
+        font-size: 24px;
+        line-height: 32px;
+        margin-top: 16px;
+        color: #835afd;
+        align-items: center;
+        justify-content: center;
+    }
+
     aside {
         display: flex;
         flex: 7;
